@@ -8,10 +8,11 @@ import org.example.bank2.entity.User;
 import org.example.bank2.repository.CardRepository;
 import org.example.bank2.service.CardServiceImpl;
 import org.example.bank2.service.UserService;
+import org.example.bank2.util.CardNumberProtector;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
@@ -36,8 +37,16 @@ public class CardServiceImplTest {
     @Mock
     private UserService userService;
 
-    @InjectMocks
     private CardServiceImpl cardService;
+
+    @BeforeEach
+    void setUp() {
+        cardService = new CardServiceImpl(repository,
+                                          userService,
+                                          new CardNumberProtector(
+                                                  "testCardEncryptionSecret",
+                                                  "testCardHashSecret"));
+    }
 
     @AfterEach
     void clearSecurityContext() {
@@ -52,7 +61,7 @@ public class CardServiceImplTest {
                 card(1L, "1111222233334444", 10L, CardStatus.ACTIVE, 500L),
                 card(2L, "5555666677778888", 11L, CardStatus.BLOCKED, 900L)
         ), pageable, 5);
-        when(repository.findAllByFilters(null, null, null, pageable)).thenReturn(cardsPage);
+        when(repository.findAllByFilters(null, null, null, null, pageable)).thenReturn(cardsPage);
 
         Page<CardResponse> result = cardService.getAllCards(pageable, null, null, null);
 
@@ -60,7 +69,7 @@ public class CardServiceImplTest {
         assertEquals(5, result.getTotalElements());
         assertEquals("**** **** **** 4444", result.getContent().get(0).getNumber());
         assertEquals("**** **** **** 8888", result.getContent().get(1).getNumber());
-        verify(repository).findAllByFilters(null, null, null, pageable);
+        verify(repository).findAllByFilters(null, null, null, null, pageable);
     }
 
     @Test
@@ -71,14 +80,14 @@ public class CardServiceImplTest {
         Page<Card> cardsPage = new PageImpl<>(List.of(
                 card(3L, "1234901200000001", 12L, CardStatus.ACTIVE, 1200L)
         ), pageable, 1);
-        when(repository.findAllByFilters(numberFilter, null, null, pageable)).thenReturn(cardsPage);
+        when(repository.findAllByFilters(null, numberFilter, null, null, pageable)).thenReturn(cardsPage);
 
         Page<CardResponse> result = cardService.getAllCards(pageable, numberFilter, null, null);
 
         assertEquals(1, result.getContent().size());
-        assertEquals(3L, result.getContent().get(0).getId());
-        assertEquals("**** **** **** 0001", result.getContent().get(0).getNumber());
-        verify(repository).findAllByFilters(numberFilter, null, null, pageable);
+        assertEquals(3L, result.getContent().getFirst().getId());
+        assertEquals("**** **** **** 0001", result.getContent().getFirst().getNumber());
+        verify(repository).findAllByFilters(null, numberFilter, null, null, pageable);
     }
 
     @Test
@@ -88,14 +97,14 @@ public class CardServiceImplTest {
         Page<Card> cardsPage = new PageImpl<>(List.of(
                 card(4L, "4000000000000004", 13L, CardStatus.FRIEZE, 700L)
         ), pageable, 2);
-        when(repository.findAllByFilters(null, CardStatus.FRIEZE, null, pageable)).thenReturn(cardsPage);
+        when(repository.findAllByFilters(null, null, CardStatus.FRIEZE, null, pageable)).thenReturn(cardsPage);
 
         Page<CardResponse> result = cardService.getAllCards(pageable, null, CardStatus.FRIEZE, null);
 
         assertEquals(1, result.getContent().size());
-        assertEquals(CardStatus.FRIEZE, result.getContent().get(0).getStatus());
+        assertEquals(CardStatus.FRIEZE, result.getContent().getFirst().getStatus());
         assertEquals(2, result.getTotalElements());
-        verify(repository).findAllByFilters(null, CardStatus.FRIEZE, null, pageable);
+        verify(repository).findAllByFilters(null, null, CardStatus.FRIEZE, null, pageable);
     }
 
     @Test
@@ -106,21 +115,21 @@ public class CardServiceImplTest {
         Page<Card> cardsPage = new PageImpl<>(List.of(
                 card(5L, "5100000000000005", 14L, CardStatus.BLOCKED, 15_000L)
         ), pageable, 1);
-        when(repository.findAllByFilters(null, null, balanceFilter, pageable)).thenReturn(cardsPage);
+        when(repository.findAllByFilters(null, null, null, balanceFilter, pageable)).thenReturn(cardsPage);
 
         Page<CardResponse> result = cardService.getAllCards(pageable, null, null, balanceFilter);
 
         assertEquals(1, result.getContent().size());
-        assertEquals(15_000L, result.getContent().get(0).getBalance());
-        assertEquals("**** **** **** 0005", result.getContent().get(0).getNumber());
-        verify(repository).findAllByFilters(null, null, balanceFilter, pageable);
+        assertEquals(15_000L, result.getContent().getFirst().getBalance());
+        assertEquals("**** **** **** 0005", result.getContent().getFirst().getNumber());
+        verify(repository).findAllByFilters(null, null, null, balanceFilter, pageable);
     }
 
     @Test
     void getAllCardsWithAllFiltersReturnsDifferentCardsForCurrentUser() {
         authenticate("user-login", "USER");
         Pageable pageable = PageRequest.of(0, 2);
-        String numberFilter = "7777";
+        String numberFilter = "1234";
         CardStatus statusFilter = CardStatus.ACTIVE;
         Long balanceFilter = 2_500L;
         UserProjection currentUser = new UserProjection(77L);
@@ -128,16 +137,16 @@ public class CardServiceImplTest {
         Page<Card> cardsPage = new PageImpl<>(List.of(
                 card(6L, "9999000077771234", 77L, CardStatus.ACTIVE, 2_500L)
         ), pageable, 1);
-        when(repository.findAllByOwnerIdAndFilters(77L, numberFilter, statusFilter, balanceFilter, pageable))
+        when(repository.findAllByOwnerIdAndFilters(77L, null, numberFilter, statusFilter, balanceFilter, pageable))
                 .thenReturn(cardsPage);
 
         Page<CardResponse> result = cardService.getAllCards(pageable, numberFilter, statusFilter, balanceFilter);
 
         assertEquals(1, result.getContent().size());
-        assertEquals(77L, result.getContent().get(0).getOwnerId());
-        assertEquals("**** **** **** 1234", result.getContent().get(0).getNumber());
+        assertEquals(77L, result.getContent().getFirst().getOwnerId());
+        assertEquals("**** **** **** 1234", result.getContent().getFirst().getNumber());
         verify(userService).getUserProjectionByLogin("user-login");
-        verify(repository).findAllByOwnerIdAndFilters(77L, numberFilter, statusFilter, balanceFilter, pageable);
+        verify(repository).findAllByOwnerIdAndFilters(77L, null, numberFilter, statusFilter, balanceFilter, pageable);
     }
 
     private void authenticate(String login, String authority) {
@@ -149,7 +158,9 @@ public class CardServiceImplTest {
     private Card card(Long id, String number, Long ownerId, CardStatus status, Long balance) {
         Card card = new Card();
         card.setId(id);
-        card.setNumber(number);
+        card.setNumberEncrypted("encrypted-" + id);
+        card.setNumberHash("hash-" + id);
+        card.setNumberLast4(number.substring(number.length() - 4));
         card.setOwner(new User(ownerId));
         card.setStatus(status);
         card.setBalance(balance);
